--- a/app/views/chart/index.html.erb
+++ b/app/views/chart/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Should be in JSON</h1>
-<h2>If you're seeing this, there's a problem.</h2>
+<h1>My Facebook Likes Over Time</h1>
+
+<div id="chart" class="chart"></div>
