--- a/app/assets/stylesheets/chart.css
+++ b/app/assets/stylesheets/chart.css
@@ -4,6 +4,12 @@ h1 {
   font-size: 18px;
 }
 
+h2 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
 .chart {
   width: 800px;
   height: 500px;
